[ofono-binder] Added ofono_ims_driver. JB#57408

--- a/binder.conf
+++ b/binder.conf
@@ -149,3 +149,11 @@
 # Default all
 #
 #deviceStateTracking=all
+
+# Comma-separated list of features to disable. The following values are
+# allowed: cbs, data, netreg, pb, rat, auth, sms, stk, ussd, voice, ims,
+# all.
+#
+# Default none (all supported features are enabled)
+#
+#disableFeatures=
