[ofono-binder] Documented extPlugin config option

--- a/binder.conf
+++ b/binder.conf
@@ -91,6 +91,14 @@
 #
 # [slot1]
 
+# Specifies the extension plugin to use. The plugin must be properly
+# installed and registered at startup with libofonobinderpluginext by
+# calling binder_ext_plugin_register()
+#
+# Default none
+#
+#extPlugin=
+
 # Since IRadio API doesn't provide a standard way of querying the number
 # of remaining pin retries, some implementations (namely Qualcomm) allow
 # to query the retry count by sending the empty pin. If your implementation
