[ofono-binder] Extension for voice calls. JB#57724

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 build
 unit/coverage/*.gcov
 unit/coverage/report
+debian/.debhelper
+debian/files
+debian/*.debhelper.log
+debian/*.install
+debian/*.substvars
+debian/libofonobinderpluginext-dev
+debian/libofonobinderpluginext
+debian/tmp
