[ofono-binder] IMS control extension. JB#57495

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -47,6 +47,7 @@ LIB = $(LIB_NAME).a
 
 SRC = \
   binder_ext_call.c \
+  binder_ext_ims.c \
   binder_ext_plugin.c \
   binder_ext_slot.c \
   binder_ext_sms.c
