[unit] More unit tests

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,7 +1,9 @@
 # -*- Mode: makefile-gmake -*-
 
 .PHONY: clean all debug release
+.PHONY: debug_lib release_lib coverage_lib
 .PHONY: print_debug_so print_release_so
+.PHONY: print_debug_lib print_release_lib print_coverage_lib
 .PHONY: pkgconfig install install-dev
 
 
@@ -61,6 +63,7 @@ INCLUDE_DIR = include
 BUILD_DIR = build
 DEBUG_BUILD_DIR = $(BUILD_DIR)/debug
 RELEASE_BUILD_DIR = $(BUILD_DIR)/release
+COVERAGE_BUILD_DIR = $(BUILD_DIR)/coverage
 
 #
 # Tools and flags
@@ -68,6 +71,7 @@ RELEASE_BUILD_DIR = $(BUILD_DIR)/release
 
 CC = $(CROSS_COMPILE)gcc
 LD = $(CC)
+STRIP ?= strip
 WARNINGS = -Wall -Wstrict-aliasing -Wunused-result
 INCLUDES = -I$(INCLUDE_DIR)
 BASE_FLAGS = -fPIC
@@ -77,6 +81,7 @@ FULL_LDFLAGS = $(BASE_FLAGS) $(LDFLAGS) -shared -Wl,-soname,$(LIB_SONAME) \
   $(shell pkg-config --libs $(PKGS)) -lpthread
 DEBUG_FLAGS = -g
 RELEASE_FLAGS =
+COVERAGE_FLAGS = -g
 
 KEEP_SYMBOLS ?= 0
 ifneq ($(KEEP_SYMBOLS),0)
@@ -87,6 +92,7 @@ DEBUG_LDFLAGS = $(FULL_LDFLAGS) $(DEBUG_FLAGS)
 RELEASE_LDFLAGS = $(FULL_LDFLAGS) $(RELEASE_FLAGS)
 DEBUG_CFLAGS = $(FULL_CFLAGS) $(DEBUG_FLAGS) -DDEBUG
 RELEASE_CFLAGS = $(FULL_CFLAGS) $(RELEASE_FLAGS) -O2
+COVERAGE_CFLAGS = $(FULL_CFLAGS) $(COVERAGE_FLAGS) --coverage
 
 #
 # Files
@@ -95,6 +101,7 @@ RELEASE_CFLAGS = $(FULL_CFLAGS) $(RELEASE_FLAGS) -O2
 PKGCONFIG = $(BUILD_DIR)/$(LIB_NAME).pc
 DEBUG_OBJS = $(SRC:%.c=$(DEBUG_BUILD_DIR)/%.o)
 RELEASE_OBJS = $(SRC:%.c=$(RELEASE_BUILD_DIR)/%.o)
+COVERAGE_OBJS = $(SRC:%.c=$(COVERAGE_BUILD_DIR)/%.o)
 
 #
 # Dependencies
@@ -110,6 +117,7 @@ endif
 $(PKGCONFIG): | $(BUILD_DIR)
 $(DEBUG_OBJS) $(DEBUG_SO): | $(DEBUG_BUILD_DIR)
 $(RELEASE_OBJS) $(RELEASE_SO): | $(RELEASE_BUILD_DIR)
+$(COVERAGE_OBJS) $(COVERAGE_LIB): | $(COVERAGE_BUILD_DIR)
 
 #
 # Rules
@@ -119,10 +127,19 @@ DEBUG_SO = $(DEBUG_BUILD_DIR)/$(LIB_SO)
 RELEASE_SO = $(RELEASE_BUILD_DIR)/$(LIB_SO)
 DEBUG_LINK = $(DEBUG_BUILD_DIR)/$(LIB_SYMLINK1)
 RELEASE_LINK = $(RELEASE_BUILD_DIR)/$(LIB_SYMLINK1)
+DEBUG_LIB = $(DEBUG_BUILD_DIR)/$(LIB)
+RELEASE_LIB = $(RELEASE_BUILD_DIR)/$(LIB)
+COVERAGE_LIB = $(COVERAGE_BUILD_DIR)/$(LIB)
 
 debug: $(DEBUG_SO)
 
 release: $(RELEASE_SO)
+
+debug_lib: $(DEBUG_LIB)
+
+release_lib: $(RELEASE_LIB)
+
+coverage_lib: $(COVERAGE_LIB)
 
 pkgconfig: $(PKGCONFIG)
 
@@ -131,6 +148,15 @@ print_debug_so:
 
 print_release_so:
 	@echo $(RELEASE_SO)
+
+print_debug_lib:
+	@echo $(DEBUG_LIB)
+
+print_release_lib:
+	@echo $(RELEASE_LIB)
+
+print_coverage_lib:
+	@echo $(COVERAGE_LIB)
 
 clean:
 	rm -f *~ $(SRC_DIR)/*~ $(INCLUDE_DIR)/*~
@@ -145,11 +171,17 @@ $(DEBUG_BUILD_DIR):
 $(RELEASE_BUILD_DIR):
 	mkdir -p $@
 
+$(COVERAGE_BUILD_DIR):
+	mkdir -p $@
+
 $(DEBUG_BUILD_DIR)/%.o : $(SRC_DIR)/%.c
 	$(CC) -c $(DEBUG_CFLAGS) -MT"$@" -MF"$(@:%.o=%.d)" $< -o $@
 
 $(RELEASE_BUILD_DIR)/%.o : $(SRC_DIR)/%.c
 	$(CC) -c $(RELEASE_CFLAGS) -MT"$@" -MF"$(@:%.o=%.d)" $< -o $@
+
+$(COVERAGE_BUILD_DIR)/%.o : $(SRC_DIR)/%.c
+	$(CC) -c $(COVERAGE_CFLAGS) -MT"$@" -MF"$(@:%.o=%.d)" $< -o $@
 
 $(DEBUG_SO): $(DEBUG_OBJS)
 	$(LD) $(DEBUG_OBJS) $(DEBUG_LDFLAGS) -o $@
@@ -161,6 +193,18 @@ $(RELEASE_SO): $(RELEASE_OBJS)
 ifeq ($(KEEP_SYMBOLS),0)
 	strip $@
 endif
+
+$(DEBUG_LIB): $(DEBUG_OBJS)
+	$(AR) rc $@ $?
+	ranlib $@
+
+$(RELEASE_LIB): $(RELEASE_OBJS)
+	$(AR) rc $@ $?
+	ranlib $@
+
+$(COVERAGE_LIB): $(COVERAGE_OBJS)
+	$(AR) rc $@ $?
+	ranlib $@
 
 #
 # LIBDIR usually gets substituted with arch specific dir.
