--- a/unit/Makefile
+++ b/unit/Makefile
@@ -5,6 +5,8 @@
 all:
 %:
 	@$(MAKE) -C unit_base $*
+	@$(MAKE) -C unit_ext_ims $*
+	@$(MAKE) -C unit_ext_slot $*
 	@$(MAKE) -C unit_sim_settings $*
 
 clean: unitclean
