[ofono-binder] Make data profile ids configurable. JB#58008

--- a/binder.conf
+++ b/binder.conf
@@ -123,6 +123,18 @@
 #
 #useDataProfiles=true
 
+# Configures default data profile ID.
+#
+# Default 0 (RADIO_DATA_PROFILE_DEFAULT)
+#
+#defaultDataProfileId=0
+
+# Configures MMS data profile ID.
+#
+# Default 0 (RADIO_DATA_PROFILE_DEFAULT)
+#
+#mmsDataProfileId=0
+
 # Comma-separated signal strength range, in dBm.
 #
 # These values are used for translating dBm values returned by the modem in
