[unit] Added unit_ext_plugin

--- a/unit/Makefile
+++ b/unit/Makefile
@@ -6,6 +6,7 @@ all:
 %:
 	@$(MAKE) -C unit_base $*
 	@$(MAKE) -C unit_ext_ims $*
+	@$(MAKE) -C unit_ext_plugin $*
 	@$(MAKE) -C unit_ext_slot $*
 	@$(MAKE) -C unit_sim_settings $*
 
