[ofono-binder] Document radioInterface config option. JB#58746

--- a/binder.conf
+++ b/binder.conf
@@ -91,6 +91,13 @@
 #
 # [slot1]
 
+# Radio interface version. At the time of this writing, versions 1.0
+# to 1.5 were supported.
+#
+# Default 1.2 (android.hardware.radio@1.2::IRadio)
+#
+#radioInterface = 1.2
+
 # Specifies the extension plugin to use. The plugin must be properly
 # installed and registered at startup with libofonobinderpluginext by
 # calling binder_ext_plugin_register()
