[ofono-binder] Add support for network scan API. JB#58746
It doesn't seem to work reliably on all supported devices and
currently only used a fallback if getAvailableNetworks is not
supported.

--- a/binder.conf
+++ b/binder.conf
@@ -153,6 +153,17 @@
 #
 #signalStrengthRange=-100,-60
 
+# If getAvailableNetworks API is unsupported or for whatever reason
+# doesn't work, startNetworkScan can also be used to get the list of
+# available networks. Network scan API provides even more information
+# about radio technologies supported by the available operators but
+# it's only usable with IRadio interface version >= 1.2 and doesn't
+# seem to work on some devices
+#
+# Default false (try getAvailableNetworks first)
+#
+#useNetworkScan=false
+
 # With some modems, network scan returns strange operator names, i.e.
 # numeric MCC+MNC values or the same name for all operators (which is
 # actually SPN fetched from the SIM). Such strange names can be replaced
