--- a/binder.conf
+++ b/binder.conf
@@ -195,3 +195,9 @@
 # Default none (all supported features are enabled)
 #
 #disableFeatures=
+
+# LTE network mode.
+#
+# Default 9 (LTE_GSM_WCDMA)
+#
+#lteNetworkMode=9
