[ofono-binder] Made UMTS network mode configurable. JB#59207

--- a/binder.conf
+++ b/binder.conf
@@ -201,3 +201,9 @@
 # Default 9 (LTE_GSM_WCDMA)
 #
 #lteNetworkMode=9
+
+# UMTS network mode.
+#
+# Default 3 (GSM_WCDMA_AUTO)
+#
+#umtsNetworkMode=3
